# ai-radar

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  SPEC.md  config.example.yaml  config.yaml  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/hooks/: pre_tool_guard.sh  stop_run_tests.sh
.github/ISSUE_TEMPLATE/: 1_test.yml  2_impl.yml  3_scaffold.yml  5_refactor.yml
.github/workflows/: daily-briefing.yml  tests.yml
docs/: playbook-notes.md  pre-implementation-roadmap.md  roadmap.md
examples/: sample-briefing.md
examples/ai-radar-spec-review/: spec-agent-prompt.md  spec-agent-revision-prompt.md  spec-scorer-scorecard.md
radar/: __main__.py  cache.py  config.py  models.py  pipeline.py
radar/llm/: client.py  prompts.py  summarizer.py  synthesizer.py
radar/output/: markdown.py
radar/processing/: deduplicator.py  excerpt_fetcher.py  full_fetcher.py  pre_filter.py  truncator.py
radar/sources/: arxiv.py  base.py  gmail.py  hn.py  rss.py
spec-analysis/: spec-agent-revision-2-open-questions.md
tests/: conftest.py
tests/fixtures/: arxiv_response.xml  gmail_newsletter.html  hackernews_response.json  rss_standard.xml  web_article.html
tests/integration/: test_pipeline.py
tests/unit/: test_arxiv.py  test_cache.py  test_config.py  test_deduplicator.py  test_excerpt_fetcher.py  test_full_fetcher.py  test_gmail.py  test_hn.py  test_llm_client.py  test_main.py  test_markdown.py  test_models.py  test_pre_filter.py  test_rss.py  test_source_base.py  test_summarizer.py  test_synthesizer.py  test_truncator.py
