[project]
name = "ai-radar"
version = "0.1.0"
description = "Daily briefing pipeline: ingests articles, scores with LLM, delivers by email."
requires-python = ">=3.12"
dependencies = [
    "feedparser",
    "trafilatura",
    "litellm",
    "langfuse",
    "tenacity",
    "structlog",
    "click",
    "httpx",
    "pydantic",
    "pyyaml",
    "python-dotenv",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pytest-recording",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstrings — not required for this project
    "COM812", # trailing comma — conflicts with ruff formatter
    "ISC001", # implicit string concat — conflicts with ruff formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests
"radar/llm/prompts.py" = ["S105"]  # PASS_* variables are prompt templates, not passwords

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "feedparser.*",
    "trafilatura.*",
    "googleapiclient.*",
    "google.auth.*",
    "google.oauth2.*",
    "google_auth_oauthlib.*",
    "yaml",
    "litellm.*",
    "langfuse.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
